fix: use allowedOriginPatterns wildcard for CORS to support all Vercel URLs